[workspace]
resolver = "2"

members = ["packages/*", "integration_tests"]

[workspace.package]
version = "0.4.0-rc1"
repository = "https://github.com/provenance-io/provwasm-test-tube"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
### CosmWasm

cosmwasm-schema = { version = "2.2.2" }
cosmwasm-std = { version = "2.2.2", default-features = false, features = [
    "cosmwasm_2_1",
    "stargate",
    "std",
] }
cw-storage-plus = { version = "2.0.0" }

### ProvWasm
provwasm-mocks = { version = "2.7.0-rc1" }
provwasm-std = { version = "2.7.0-rc1" }
provwasm-test-tube = { version = "0.4.0-rc1", path = "packages/provwasm-test-tube" }
test-tube-prov = { version = "0.4.0-rc1", path = "packages/test-tube" }

base64 = "0.22.0"
chrono = { version = "0.4.37", default-features = false }
cosmrs = { version = "0.21.0", default-features = false, features = [
    "cosmwasm",
    "rpc",
] }
prost = { version = "0.13.2", default-features = false, features = [
    "prost-derive",
] }
rayon = "1.5.3"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.115", features = ["std"] }
thiserror = { version = "1.0.58" }

# Patch provwasm-std from git dependencies to use the released crates.io version
# This ensures all provwasm-std dependencies resolve to the same released version,
# even when contracts are pulled from git (which aren't published to crates.io).
# This fixes multiple `requires_provenance` from multiple provwasm-std dependencies.
[patch."https://github.com/provenance-io/provwasm"]
provwasm-std = { version = "2.7.0-rc1" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
