[workspace]
resolver = "2"

members = ["packages/*", "integration_tests"]

[workspace.package]
version = "0.5.0"
repository = "https://github.com/provenance-io/provwasm-test-tube"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
### CosmWasm

cosmwasm-schema = { version = "2.2.2" }
cosmwasm-std = { version = "2.2.2", default-features = false, features = [
    "cosmwasm_2_1",
    "stargate",
    "std",
] }
cw-storage-plus = { version = "2.0.0" }

### ProvWasm
provwasm-mocks = { version = "2.8.0" }
provwasm-std = { version = "2.8.0", default-features = false}
provwasm-test-tube = { version = "0.5.0", path = "packages/provwasm-test-tube" }
test-tube-prov = { version = "0.5.0", path = "packages/test-tube" }

base64 = "0.22.0"
ed25519-zebra = { version = "4.1.0", default-features = false, features = [
    "alloc",
] }
flate2 = "1.0"
chrono = { version = "0.4.37", default-features = false }
cosmrs = { version = "0.22.0", default-features = false, features = [
    "cosmwasm",
    "rpc",
] }
prost = { version = "0.13.2", default-features = false, features = [
    "prost-derive",
] }
rayon = "1.5.3"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.115", features = ["std"] }
thiserror = { version = "2.0.17" }

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

# Patch git-based provwasm-std dependencies to use the crates.io version.
# This prevents multiple versions of provwasm-std from being compiled when
# depending on unpublished contracts from the provwasm git repository.
[patch."https://github.com/provenance-io/provwasm"]
provwasm-std = { version = "2.8.0" }
