[package]
name = "integration"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Ken Talley <4344285+kwtalley@users.noreply.github.com"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
attrs = { git = "https://github.com/provenance-io/provwasm", branch = "release/v2.7.x" }
marker = { git = "https://github.com/provenance-io/provwasm", branch = "release/v2.7.x" }
name = { git = "https://github.com/provenance-io/provwasm", branch = "release/v2.7.x" }
trigger = { git = "https://github.com/provenance-io/provwasm", branch = "release/v2.7.x" }
provwasm-tutorial = { git = "https://github.com/provenance-io/provwasm", branch = "release/v2.7.x" }
provwasm-std = { workspace = true }

[dev-dependencies]
prost = { workspace = true, default-features = false }
provwasm-test-tube = { path = "../packages/provwasm-test-tube" }