[package]
name = "integration"
version = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Ken Talley <4344285+kwtalley@users.noreply.github.com"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = []

[dependencies]
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }
attrs = { git = "https://github.com/provenance-io/provwasm", tag = "v2.8.0" }
marker = { git = "https://github.com/provenance-io/provwasm", tag = "v2.8.0" }
name = { git = "https://github.com/provenance-io/provwasm", tag = "v2.8.0" }
trigger = { git = "https://github.com/provenance-io/provwasm", tag = "v2.8.0" }
provwasm-tutorial = { git = "https://github.com/provenance-io/provwasm", tag = "v2.8.0" }
provwasm-std = { workspace = true }

[dev-dependencies]
prost = { workspace = true, default-features = false }
provwasm-test-tube = { path = "../packages/provwasm-test-tube" }
